[package]
name = "ScrapeFactordbPrpsRust"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
reqwest = "0.12"
tokio = { version = "1.48", features = ["rt", "rt-multi-thread", "macros", "signal", "sync", "time"] }
regex = "1.12"
primitive-types = "0.14"
log = "0.4"
itertools = "0.14"
simple-log = "2.4"
governor = "0.10"
cuckoofilter = "0.5.0"
const_format = "0.2"
rand = "0.9"
serde_json = "1.0"
compact_str = { version = "0.9", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
num-modular = "0.6"
num-prime = { version = "0.4", features = ["big-table"] }
urlencoding = "2.1"
anyhow = "1.0"
num-integer = "0.1"
atomic-time = "0.1"
gryf = "0.1"
curl = "0.4"
arcstr = { version = "1.2", default-features = false, features = ["serde"] }
serde_urlencoded = "0.7"