[package]
name = "ScrapeFactordbPrpsRust"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = "fat"
codegen-units = 1
debug = "full"

[dependencies]
reqwest = { version = "0.13", features = ["form"] }
tokio = { version = "1.49", features = ["rt", "rt-multi-thread", "macros", "signal", "sync", "time"] }
regex = "1.12"
primitive-types = "0.14"
log = "0.4"
itertools = "0.14"
simple-log = "2.4"
governor = "0.10"
cuckoofilter = "0.5"
rand = "0.10"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
num-modular = "0.6"
num-prime = { version = "0.4", features = ["big-table"] }
urlencoding = "2.1"
anyhow = "1.0"
num-integer = "0.1"
atomic-time = "0.1"
gryf = "0.2"
curl = "0.4"
replace_with = "0.1"
quick_cache = "0.6"
async-backtrace = { git = "https://github.com/Pr0methean/async-backtrace.git", branch = "patch-1" }
hipstr = { version = "0.8", default-features = false, features = ["serde"] }
futures-util = "0.3"
peg = "0.8"
yamaquasi = { git = "https://github.com/remyoudompheng/yamaquasi.git" }
derivative = "2.2"
ahash = "0.8"
sysinfo = "0.38"
stats_alloc = { version = "0.1", features = ["nightly"] }
paste = "1.0"
tokio-stream = { version = "0.1.18", features = ["signal"] }

[target.'cfg(not(windows))'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
mockall = "0.14"
const_format = "0.2"